# Trabalho_ED2

./: CMakeLists.txt  main.cpp
.gitignore/: .gitignore
Headers/: Answer.h  Cenario4.h  CoalescedHash.h  CombSort.h  CompareCount.h  DoubleHash.h  FileUtils.h  Hash.h  HashCoalesced.h  HashDouble.h  HashLinear.h  HashSeparated.h  HashSeparatedS.h  HeapSort.h  InsertionSort.h  LinearHash.cpp  LinearHash.h  MergeSort.h  Question.h  QuestionList.h  QuickSort.h  SelectionSort.h  Tag.h  Vertex.h
Source/: Answer.cpp  CoalescedHash.cpp  CombSort.cpp  CompareCount.cpp  DoubleHash.cpp  FileUtils.cpp  Hash.cpp  HashCoalesced.cpp  HashDouble.cpp  HashLinear.cpp  HashSeparated.cpp  HashSeparatedS.cpp  HeapSort.cpp  InsertionSort.cpp  LinearHash.cpp  MergeSort.cpp  Question.cpp  QuestionList.cpp  QuickSort.cpp  SelectionSort.cpp  Tag.cpp  Vertex.cpp
